# nautobot_route_tracking

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  documentation-reviewer.md
.claude/commands/project/: audit.md  commit.md  findings.md  fixdoc.md  metrics.md  review.md  status.md  validate.md
.claude/skills/: README.md
_convention/: README.md  _core.md  _domain-template.md  _nautobot-plugin.md
docs/: README.md  SPECIFICATIONS.md  development.md  installation.md  nautobot_plugin_dev_lessons.md  usage.md
docs/research/: README.md  cookiecutter_structure.md  napalm_routes_research.md  netdb_jobs_analysis.md  netdb_models_analysis.md  netdb_standards_analysis.md  netdb_ui_analysis.md
nautobot_route_tracking/: __init__.py  admin.py  constants.py  filters.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  views.py
nautobot_route_tracking/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_route_tracking/graphql/: __init__.py  types.py
nautobot_route_tracking/jobs/: __init__.py  _base.py  collect_routes.py  purge_old_routes.py
nautobot_route_tracking/migrations/: 0001_initial.py  0002_add_partial_unique_constraint_no_vrf.py  0003_routeentry_idx_route_vrf_lastseen.py
nautobot_route_tracking/static/nautobot_route_tracking/css/: route_tracking.css
nautobot_route_tracking/templates/nautobot_route_tracking/: dashboard.html  device_route_tab.html
nautobot_route_tracking/templates/nautobot_route_tracking/inc/: device_route_panel.html
reports/findings/: registry.yml
scripts/: README.md  findings.py  fixdoc.py  metrics.py  validate-conventions.sh
scripts/tests/: test_findings.py  test_fixdoc.py  test_metrics.py
tests/: README.md  conftest.py  factories.py  test_api.py  test_filters.py  test_jobs.py  test_models.py  test_settings.py  test_urls.py  test_views.py
